--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap");
+
+@keyframes flip {
+  from {
+    transform: rotateX(0deg);
+  }
+  to {
+    transform: rotateX(-180deg);
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .flipAnimation {
+    animation: flip 700ms ease-in;
+    animation-fill-mode: forwards;
+  }
+  .svgIcon:hover > path {
+    fill: hsl(345, 95%, 68%);
+  }
+  .flipElement {
+    @apply w-full h-full bg-[hsl(236,_21%,_26%)] flex justify-center items-center overflow-hidden;
+  }
+  .feBottomBorder {
+    @apply absolute top-0 h-[1px] w-full bg-[hsl(234,_17%,_12%)];
+  }
+  .feBorderCircle {
+    @apply bg-[hsl(234,_17%,_12%)] w-4 h-4 rounded-full absolute;
+  }
 }
